# outer

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
docs/: test_ARCHITECTURE.md
src/outer/: __init__.py
